--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ analytics:
 # Site Author
 author:
   name             : "Sneha Narayan"
-  avatar           : "profile.png"
+  avatar           : "Snehaphoto.jpg"
   bio              : "PhD Candidate in Technology and Social Behavior, Northwestern University"
   location         : 
   employer         :
