--- a/_config.yml
+++ b/_config.yml
@@ -92,7 +92,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "snehanar"
+  github           : 
   google_plus      :
   keybase          :
   instagram        :
