--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   location         : 
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=2q5akfwAAAAJ&hl=en"
-  email            :
+  email            : "snehanarayan@u.northwestern.edu"
   uri              :
   bitbucket        :
   codepen          :
