--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,5 +10,5 @@ main:
     url: /teaching/    
     
   - title: "CV"
-    url: /files/Narayan_CV.pdf
+    url: http://snehanar.github.io/files/Narayan_CV.pdf
     
