--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,10 @@
 # main links links
 main:
-  - title: "Research"
-    url: /research/ 
+  #- title: "Research"
+  #  url: /research/ 
 
-  - title: "Teaching"
-    url: /teaching/    
+  #- title: "Teaching"
+  #  url: /teaching/    
     
   - title: "CV"
     url: http://snehanar.github.io/files/Narayan_CV.pdf
