--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Sneha Narayan"
   avatar           : "Snehaphoto.jpg"
-  bio              : "PhD Candidate in Technology and Social Behavior, Northwestern University"
+  bio              : "Department of Computer Science, Carleton College"
   location         : 
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=2q5akfwAAAAJ&hl=en"
