--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,5 +7,5 @@ main:
   #  url: /teaching/    
     
   - title: "CV"
-    url: http://snehanar.github.io/files/Narayan_CV.pdf
+    url: http://snehanar.github.io/files/Narayan_CV_2020.pdf
     
